--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,5 @@
     <string name="Delete_Faculty">Delete Faculty</string>
     <string name="Namma_SIT">NAMMA SIT</string>
     <string name="Delete">Delete</string>
-    <string name="Title_Will_Load_Here">Title will load here!!</string>
+    <string name="Title_Will_Load_Here">Title will load here!</string>
 </resources>
