--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,12 +20,12 @@
     <string name="Post">Post</string>
     <string name="No_Record_Available">No record available</string>
     <string name="Update_Info">Update info</string>
-    <string name="Information_Science_engineering">Information Science&amp;Engineering</string>
-    <string name="Computer_Science_And_Engineering">Computer Science&amp;Engineering</string>
+    <string name="Information_Science_engineering">Information Science &amp; Engineering</string>
+    <string name="Computer_Science_And_Engineering">Computer Science &amp; Engineering</string>
     <string name="Mechanical_Engineering">Mechanical Engineering</string>
-    <string name="Electronics_And_Communication_Engineering">Electronics&amp;Communication Engineering</string>
+    <string name="Electronics_And_Communication_Engineering">Electronics &amp; Communication Engineering</string>
     <string name="Telecommunication_Engineering">Telecommunication engineering</string>
-    <string name="Electronics_And_Instrumentation_Engineering">Electronics&amp;Instrumentation Engineering</string>
+    <string name="Electronics_And_Instrumentation_Engineering">Electronics &amp; Instrumentation Engineering</string>
     <string name="Mathematics">Mathematics</string>
     <string name="Physics">Physics</string>
     <string name="Chemical_Engineering">Chemical Engineering</string>
@@ -33,12 +33,13 @@
     <string name="Biotechnology">Biotechnology</string>
     <string name="MBA">Master of Business Administration</string>
     <string name="Architecture">Architecture</string>
-    <string name="Administration_And_Non_Teaching">Administration&amp;Non-Teaching</string>
+    <string name="Administration_And_Non_Teaching">Administration &amp; Non-Teaching</string>
     <string name="Instrumentation_Engineering">Instrumentation Engineering</string>
-    <string name="Industrial_Engineering_And_Management">Industrial Engineering&amp;Management</string>
+    <string name="Industrial_Engineering_And_Management">Industrial Engineering &amp; Management</string>
     <string name="Update">Update</string>
     <string name="Delete_Faculty">Delete Faculty</string>
     <string name="Namma_SIT">NAMMA SIT</string>
     <string name="Delete">Delete</string>
     <string name="Title_Will_Load_Here">Title will load here!</string>
+    <string name="Artificial_Intelligence_and_Data_Science">Artificial Intelligence and Data Science</string>
 </resources>
