Splash Screen. User Registration and type segregation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,15 @@
     <string name="Delete">Delete</string>
     <string name="Title_Will_Load_Here">Title will load here!</string>
     <string name="Artificial_Intelligence_and_Data_Science">Artificial Intelligence and Data Science</string>
-    <string name="OTP_Instruction">You will receive a One Time Password(OTP) on below number:</string>
+    <string name="OTP_Instruction">You will receive a One Time Password(OTP) on below number(Click "Get Otp"):</string>
     <string name="Verify_OTP"><u>Verify Otp</u></string>
     <string name="OTP">OTP</string>
     <string name="Resend_OTP"><u>Resend OTP</u></string>
     <string name="Counter_Hint">Counter</string>
+    <string name="collegeName">Siddaganga Institute of Technology</string>
+    <string name="collegeSplashText">An Autonomous Institute, Affiliated to VTU Belagavi, Approved by AICTE</string>
+    <string name="collegeAddress">B.H. Road, Tumkur 572 103, Karnataka, India</string>
+    <string name="Get_OTP">Get OTP</string>
+    <string name="date">Date</string>
+    <string name="username_comes_here">userName comes here</string>
 </resources>
